se realizaron correcciones hechas por cliente

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -95,12 +95,8 @@
 
             <p class="acercaTexto"> En la actualidad, sigue activo formando y preparando competidores en el ámbito
                 nacional
-                e internacional. Además de su rol como maestro de Taekwon-do, fue integrante del C.O.M. Council Of
-                Masters;
-                Representante para Sudamérica
-                de ITF Headquarters; y del Comité Técnico ITF Headquarters.
-
-                Brinda asesoramiento técnico a instructores de diferentes países, a través de cursos, clases
+                e internacional. Además de su rol como maestro de Taekwon-do brinda asesoramiento técnico a instructores
+                de diferentes países, a través de cursos, clases
                 presenciales y
                 virtuales. El Master Javier del Castillo y el grupo de instructores que lidera, participan de
                 capacitaciones
@@ -170,6 +166,7 @@
                                 <img src="../Multimedia/Icons/medal-color-icon.png" class="col-2 logrosIcono" alt="">
                                 <div class="eventoTexto col-8">
                                     <p class="eventoNombre">Campeón Nacional en 21 oportunidades</p>
+                                    <p class="eventoNombre">Formas y/o Lucha </p>
                                     <p class="eventoNombre">(Competencia anual) Desde 1994 a 2019</p>
                                 </div>
                             </div>
@@ -455,6 +452,16 @@
                             <div class="evento row">
                                 <img src="../Multimedia/Icons/viñeta.png" class="col-2 logrosIcono" alt="">
                                 <div class="eventoTexto col-8">
+                                    <p class="eventoNombre">Seminario Técnico GM Kwang Duk Chung</p>
+                                    <p class="eventoNombre">Uruguay 2010</p>
+                                </div>
+                            </div>
+
+                            <hr>
+
+                            <div class="evento row">
+                                <img src="../Multimedia/Icons/viñeta.png" class="col-2 logrosIcono" alt="">
+                                <div class="eventoTexto col-8">
                                     <p class="eventoNombre">Seminario Técnico. GM Carlos Roman</p>
                                     <p class="eventoNombre">Uruguay 2011</p>
                                 </div>
@@ -632,7 +639,7 @@
                 <img class="cardImagen" src="../Multimedia/Academias/guk gi.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA GUK GI </p>
-                    <p class="instructorAcademia">Oscar Rodríguez 3er Dan</p>
+                    <p class="instructorAcademia">Gustavo Píriz 4er Dan</p>
                 </div>
                 <div class="cardRedes container">
                     <div class="row cardSubRedes">
@@ -647,12 +654,30 @@
             </div>
 
             <div class="card col-xl-3">
+                <img class="cardImagen" src="../Multimedia/Academias/Ye-Ui.png" alt="">
+                <div class="cardText">
+                    <p class="tituloAcademia"> ACADEMIA Ye-Ui </p>
+                    <p class="instructorAcademia">Estefani Díaz 1 GUP</p>
+                </div>
+                <div class="cardRedes container">
+                    <div class="row cardSubRedes">
+                        <!-- <a class="cardLinkRedes col-3" href=""><img class="cardLogoRedes"
+                                        src="../Multimedia/Icons/Redes/FacebookWhite.png" alt=""></a> 
+                        <a class="cardLinkRedes col-3" href="https://wa.me/+59892455751"><img class="cardLogoRedes"
+                                src="../Multimedia/Icons/Redes/WhatsappWhite.png" alt=""></a>
+                        <a class="cardLinkRedes col-3" href="https://www.instagram.com/academia_delka/"><img
+                                class="cardLogoRedes" src="../Multimedia/Icons/Redes/InstagramWhite.png" alt=""></a> -->
+                    </div>
+                </div>
+            </div>
+
+            <div class="card col-xl-3">
                 <img class="cardImagen" src="../Multimedia/Academias/innae.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA INNAE </p>
                     <p class="ubicacionAcademia instructorAcademia">Costa de Oro, Uruguay</p>
                     <p class="instructorAcademia">Claudia Montautti 2do Dan</p>
-                    <p class="instructorAcademia">Martin Del Castillo 1do Dan</p>
+                    <p class="instructorAcademia">Martin Del Castillo 2do Dan</p>
                 </div>
                 <div class="cardRedes container">
                     <div class="row cardSubRedes">
@@ -673,7 +698,7 @@
                     <p class="ubicacionAcademia instructorAcademia">Costa de Oro, Uruguay</p>
                     <p class="instructorAcademia">Javier del Castillo 7mo Dan</p>
                     <p class="instructorAcademia">Claudia Montautti 2do Dan</p>
-                    <p class="instructorAcademia">Martin Del Castillo 1do Dan</p>
+                    <p class="instructorAcademia">Martin Del Castillo 2do Dan</p>
                 </div>
                 <div class="cardRedes container">
                     <div class="row cardSubRedes">
