--- a/Pages/about_en.html
+++ b/Pages/about_en.html
@@ -96,11 +96,8 @@
             <p class="acercaTexto"> In present days, he remains active in training and preparing competitors at both the
                 national and international levels.
 
-                In addition to his role as a Taekwon-do master, he is a member of the C.O.M. Council Of Masters; the
-                Representative for
-                South America at ITF Headquarters; and a member of the Technical Committee of ITF Headquarters.
-
-                Moreover, he provides technical guidance to instructors from different countries through courses,
+                In addition to his role as a Taekwon-do master, he provides technical guidance to instructors from
+                different countries through courses,
                 in-person and virtual
                 classes. Master Javier del Castillo and the group of instructors he leads continuously participate in
                 training sessions
@@ -167,6 +164,7 @@
                                 <img src="../Multimedia/Icons/medal-color-icon.png" class="col-2 logrosIcono" alt="">
                                 <div class="eventoTexto col-8">
                                     <p class="eventoNombre">Campeón Nacional en 21 oportunidades</p>
+                                    <p class="eventoNombre">Formas y/o Lucha </p>
                                     <p class="eventoNombre">(Competencia anual) Desde 1994 a 2019</p>
                                 </div>
                             </div>
@@ -457,6 +455,16 @@
                             <div class="evento row">
                                 <img src="../Multimedia/Icons/viñeta.png" class="col-2 logrosIcono" alt="">
                                 <div class="eventoTexto col-8">
+                                    <p class="eventoNombre">Seminario Técnico GM Kwang Duk Chung</p>
+                                    <p class="eventoNombre">Uruguay 2010</p>
+                                </div>
+                            </div>
+
+                            <hr>
+
+                            <div class="evento row">
+                                <img src="../Multimedia/Icons/viñeta.png" class="col-2 logrosIcono" alt="">
+                                <div class="eventoTexto col-8">
                                     <p class="eventoNombre">Seminario Técnico. GM Carlos Roman</p>
                                     <p class="eventoNombre">Uruguay 2011</p>
                                 </div>
@@ -634,7 +642,7 @@
                 <img class="cardImagen" src="../Multimedia/Academias/guk gi.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA GUK GI </p>
-                    <p class="instructorAcademia">Oscar Rodríguez 3er Dan</p>
+                    <p class="instructorAcademia">Gustavo Píriz 4er Dan</p>
                 </div>
                 <div class="cardRedes container">
                     <div class="row cardSubRedes">
@@ -648,13 +656,31 @@
                 </div>
             </div>
 
+            <div class="card col-xl-3">
+                <img class="cardImagen" src="../Multimedia/Academias/Ye-Ui.png" alt="">
+                <div class="cardText">
+                    <p class="tituloAcademia"> ACADEMIA Ye-Ui </p>
+                    <p class="instructorAcademia">Estefani Díaz 1 GUP</p>
+                </div>
+                <div class="cardRedes container">
+                    <div class="row cardSubRedes">
+                        <!-- <a class="cardLinkRedes col-3" href=""><img class="cardLogoRedes"
+                                                    src="../Multimedia/Icons/Redes/FacebookWhite.png" alt=""></a> 
+                                    <a class="cardLinkRedes col-3" href="https://wa.me/+59892455751"><img class="cardLogoRedes"
+                                            src="../Multimedia/Icons/Redes/WhatsappWhite.png" alt=""></a>
+                                    <a class="cardLinkRedes col-3" href="https://www.instagram.com/academia_delka/"><img
+                                            class="cardLogoRedes" src="../Multimedia/Icons/Redes/InstagramWhite.png" alt=""></a> -->
+                    </div>
+                </div>
+            </div>
+
             <div class="card col-md-5">
                 <img class="cardImagen" src="../Multimedia/Academias/innae.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA INNAE </p>
                     <p class="ubicacionAcademia instructorAcademia">Costa de Oro, Uruguay</p>
                     <p class="instructorAcademia">Claudia Montautti 2do Dan</p>
-                    <p class="instructorAcademia">Martin Del Castillo 1do Dan</p>
+                    <p class="instructorAcademia">Martin Del Castillo 2do Dan</p>
                 </div>
                 <div class="cardRedes container">
                     <div class="row cardSubRedes">
@@ -675,7 +701,7 @@
                     <p class="ubicacionAcademia instructorAcademia">Costa de Oro, Uruguay</p>
                     <p class="instructorAcademia">Javier del Castillo 7mo Dan</p>
                     <p class="instructorAcademia">Claudia Montautti 2do Dan</p>
-                    <p class="instructorAcademia">Martin Del Castillo 1do Dan</p>
+                    <p class="instructorAcademia">Martin Del Castillo 2do Dan</p>
                 </div>
                 <div class="cardRedes container">
                     <div class="row cardSubRedes">
