--- a/Pages/about.html
+++ b/Pages/about.html
@@ -671,6 +671,26 @@
             </div>
 
             <div class="card col-xl-3">
+                <img class="cardImagen" src="../Multimedia/Academias/SeongJang-Do-Logo.png" alt="">
+                <div class="cardText">
+                    <p class="tituloAcademia"> ACADEMIA SEONGJAND DO </p>
+                    <p class="ubicacionAcademia instructorAcademia">Treinta y Tres, Uruguay</p>
+                    <p class="instructorAcademia"> Rodrigo Cuello 2do Dan</p>
+                </div>
+                <div class="cardRedes container">
+                    <div class="row cardSubRedes">
+                        <a class="cardLinkRedes col-3"
+                            href="https://www.facebook.com/profile.php?id=61565393715605"><img class="cardLogoRedes"
+                                src="../Multimedia/Icons/Redes/FacebookWhite.png" alt=""></a>
+                        <a class="cardLinkRedes col-3" href="https://wa.me/+59899686181"><img class="cardLogoRedes"
+                                src="../Multimedia/Icons/Redes/WhatsappWhite.png" alt=""></a>
+                        <a class="cardLinkRedes col-3" href="https://www.instagram.com/seongjang_do/"><img
+                                class="cardLogoRedes" src="../Multimedia/Icons/Redes/InstagramWhite.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card col-xl-3">
                 <img class="cardImagen" src="../Multimedia/Academias/innae.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA INNAE </p>
