--- a/Pages/gallery_clases.html
+++ b/Pages/gallery_clases.html
@@ -165,6 +165,174 @@
     </section>
     <!-- END MODAL GALERIA 2 -->
 
+
+    <section class="galeriaContenedor sectorClasesGaleriaTres row">
+        <h1 class="galeriaTitulo">Taller de Competencia</h1>
+        <a class="botonGaleria" href="#!" data-bs-toggle="modal" data-bs-target="#modalGaleria1">Abrir Galeria</a>
+
+        <!-- MODAL GALERIA 3 -->
+        <div tabindex="-1" aria-labelledby="modalGaleria6" aria-hidden="true" class="modal fade" id="modalGaleria6">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <!-- START CAROUSEL -->
+                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active"><img src="../Multimedia/Gallery/Galería6/1.jpg"
+                                    class="d-block w-100" alt="..."></div>
+
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/2.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/3.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/4.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/5.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/6.jpg"
+                                    class="d-block w-100" alt="..."></div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/7.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/8.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/9.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/10.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/11.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/12.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/13.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/12.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/14.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/15.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/16.jpg"
+                                    class="d-block w-100" alt="..."></div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/17.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/18.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/19.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/20.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/21.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/22.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/23.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/22.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/24.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/25.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/26.jpg"
+                                    class="d-block w-100" alt="..."></div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/27.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/28.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/29.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/30.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/31.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/32.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/33.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/32.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/34.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/35.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/36.jpg"
+                                    class="d-block w-100" alt="..."></div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/37.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/38.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/39.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/40.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/41.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/42.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/43.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/42.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/44.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/45.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/46.jpg"
+                                    class="d-block w-100" alt="..."></div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/47.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/48.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/49.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/50.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/51.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/52.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/53.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/52.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/54.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/55.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/56.jpg"
+                                    class="d-block w-100" alt="..."></div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/57.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/58.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/59.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/60.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/61.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/62.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                            <div class="carousel-item"> <img src="../Multimedia/Gallery/Galería6/63.jpg"
+                                    class="d-block w-100" alt="..."> </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                    <!-- END CAROUSEL -->
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END MODAL GALERIA 6 -->
+
     <!-- PIE DE PAGINA -->
 
     <footer class="mw-100 container">
