actualizacion de set-24

--- a/Pages/about_en.html
+++ b/Pages/about_en.html
@@ -643,7 +643,7 @@
                 <img class="cardImagen" src="../Multimedia/Academias/guk gi.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA GUK GI </p>
-                    <p class="instructorAcademia">Gustavo Píriz 4er Dan</p>
+                    <p class="instructorAcademia">Gustavo Píriz 4to Dan</p>
                 </div>
                 <div class="cardRedes container">
                     <div class="row cardSubRedes">
@@ -679,7 +679,7 @@
                 <img class="cardImagen" src="../Multimedia/Academias/SeongJang-Do-Logo.png" alt="">
                 <div class="cardText">
                     <p class="tituloAcademia"> ACADEMIA SEONGJAND DO </p>
-                    <p class="ubicacionAcademia instructorAcademia">Treinta y Tres, Uruguay</p>
+                    <p class="ubicacionAcademia instructorAcademia">Ciudad de Canelones, Uruguay</p>
                     <p class="instructorAcademia"> Rodrigo Cuello 2do Dan</p>
                 </div>
                 <div class="cardRedes container">
