--- a/Pages/gallery_clases.html
+++ b/Pages/gallery_clases.html
@@ -201,7 +201,7 @@
         <!-- END MODAL GALERIA 2 -->
 
 
-        <section class="galeriaContenedor sectorClasesGaleriaTres row">
+        <section class="galeriaContenedor sectorClasesGaleriaDos row">
                 <h1 class="galeriaTitulo">Taller de Competencia</h1>
                 <a class="botonGaleria" href="#!" data-bs-toggle="modal" data-bs-target="#modalGaleria3">Abrir
                         Galeria</a>
