actualizacion de set-24

--- a/Pages/gallery_clases.html
+++ b/Pages/gallery_clases.html
@@ -420,6 +420,15 @@
                                                         <div class="carousel-item"> <img
                                                                         src="../Multimedia/Gallery/Galería6/63.jpg"
                                                                         class="d-block w-100" alt="..."> </div>
+                                                        <div class="carousel-item"> <img
+                                                                        src="../Multimedia/Gallery/Galería6/64.jpg"
+                                                                        class="d-block w-100" alt="..."> </div>
+                                                        <div class="carousel-item"> <img
+                                                                        src="../Multimedia/Gallery/Galería6/65.jpg"
+                                                                        class="d-block w-100" alt="..."> </div>
+                                                        <div class="carousel-item"> <img
+                                                                        src="../Multimedia/Gallery/Galería6/66.jpg"
+                                                                        class="d-block w-100" alt="..."> </div>
                                                 </div>
                                                 <button class="carousel-control-prev" type="button"
                                                         data-bs-target="#carouselExampleControlsThree"
